Bug #20592: Reset password page issues.  - Aligned the Submit button properly.  - Redirected user to dashboard after password is successfully changed.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -342,3 +342,8 @@ td.locked-student{
     text-decoration: line-through;
 }
 
+#reset-password-submit
+{
+    margin-left: 0px;
+}
+
